# protovolt

./: README.md
hardware/: .gitignore
hardware/mini/: TPS560430.kicad_sym  _autosave-mini.kicad_sch  _autosave-usb.kicad_sch  interface.kicad_sch  mcu.kicad_sch  measurement.kicad_sch  mini.kicad_pro  mini.kicad_sch  power.kicad_sch  protovolt_mini.kicad_sym  regulation.kicad_sch  temperature.kicad_sch  usb.kicad_sch
hardware/mini/protovolt_mini.pretty/: 68711214522.stp  Breadboard_400P.kicad_mod  Coilcraft-XAL1010.step  D_1610_4027Metric.kicad_mod  D_SOD-323.kicad_mod  HS20HS072RX.kicad_mod  JUSHUO_AFC07-S12ECA-00_1x12-1MP_P0.5mm_Horizontal.kicad_mod  LED_SK6812_EC20_2.0x2.0mm.kicad_mod  L_SOREDE_SRTC.1010.kicad_mod  RYQ0021A-MFG.kicad_mod  RYQ0021A.stp  SW_PUSH_SKPM_6x5mm.kicad_mod  Texas_RYQ0021A_VQFN-21-1EP_5x3mm_P0.5mm.kicad_mod  protovolt_logo.kicad_mod  skpmape010.stp
hardware/protovolt/: LM51772.kicad_sym  _autosave-protovolt.kicad_pcb  output_A.kicad_sch  power.kicad_sch  protovolt.kicad_dru  protovolt.kicad_pcb  protovolt.kicad_pro  protovolt.kicad_sch
hardware/protovolt/fab/: bom.csv  protovolt-B_Cu.gbl  protovolt-B_Mask.gbs  protovolt-B_Paste.gbp  protovolt-F_Cu.gtl  (+14 more)
protovolt/: .gitignore  Cargo.toml
protovolt/src/: app.rs  buck_boost.rs  interface.rs  main.rs  measure.rs  task.rs
protovolt/src/hal/: converter.rs  device.rs  display.rs  event.rs  interface.rs  led.rs  measure.rs  mod.rs  power.rs
protovolt/src/lib/: display.rs  event.rs  interface.rs  led.rs  main.rs  mod.rs
protovolt/src/ui/: boot.rs  controls.rs  fmt.rs  mod.rs  navbar.rs
(+4 files in other folders)
